# FinanceMailParser

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  business_rules.yaml  constants.py  pyproject.toml  requirements.txt  run.py  ui_plan.md
ai/: __init__.py  config.py  providers.py  service.py
app/: __init__.py
app/services/: __init__.py  ai_config_facade.py  ai_process_beancount.py  bill_download.py  bill_download_credit_card.py  bill_download_digital.py  bill_folder_scan.py  bill_parse_export.py  bill_view.py  email_config.py  email_config_facade.py  transactions_postprocess.py  ui_config_facade.py  ui_facade_common.py  user_rules_service.py
config/: __init__.py  business_rules.py  config_manager.py  secrets.py  user_rules.py
data_source/: qq_email.py
models/: source.py  txn.py
qianji/: aggregate_expenses.py  qianji_to_beancount.py
scripts/: validate_business_rules.py  validate_layer_dependencies.py  validate_runtime_constants.py  validate_ui_layer_imports.py
statement_parsers/: __init__.py  abc.py  alipay.py  ccb.py  ceb.py  cmb.py  icbc.py  parse.py  qq_email.py  qq_email_parser.py  wechat.py
tests/: conftest.py
ui/: app.py
utils/: __init__.py  account_extractor.py  amount_masking.py  bank_alias.py  beancount_file_manager.py  beancount_validator.py  beancount_writer.py  clean_amount.py  csv_writer.py  date_filter.py  filter_transactions.py  log_capture.py  logger.py  prompt_builder.py  prompt_builder_v2.py  prompt_redaction_check.py  test_amount_masking.py  test_clean_amount.py  test_prompt_redaction_check.py  transaction_matcher.py
(+124 files in other folders)
