[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financemailparser"
version = "0.1.0"
description = "金融账单邮件解析工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "beautifulsoup4",
  "lxml",
  "requests",
  "openpyxl",
  "PyYAML",
  "cryptography",
  "litellm",
  "tenacity",
  "beancount",
  "scikit-learn",
  "pandas-stubs~=2.3.3",
]

[project.optional-dependencies]
ui = ["streamlit"]

[dependency-groups]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
  "mypy",
  "types-requests",
  "types-PyYAML",
  "types-setuptools",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = ["."]
ignore_missing_imports = true

[tool.vulture]
paths = ["."]
exclude = ["venv", ".venv", ".uv-cache"]
sort_by_size = true
